# KarvisForYou

./: .env.example  .gitignore  README.md  SKILLS.md  pyproject.toml  setup.sh  test_wiki_spaces.py
deploy/: Dockerfile  docker-compose.yml  scf_bootstrap
docs/: known-issues.md  云更新部署方案.md  设计决策.md  部署指南.md  项目概览.md
src/: app.py  brain.py  channel_router.py  config.py  feishu_drive_io.py  feishu_task.py  finance_utils.py  gateway.py  local_io.py  log_utils.py  media.py  memory.py  onedrive_io.py  proactive.py  prompts.py  scheduler.py  skill_loader.py  storage.py  storage_base.py  user_context.py  web_routes.py  wework_crypto.py
src/channel/: __init__.py  base.py  feishu.py  router.py  telegram.py  wework.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  engine.py  interfaces.py  llm.py  monitoring.py  proactive.py  rhythm.py  scheduler.py  system_actions.py
src/infra/: __init__.py  crypto.py  logging.py  media.py  paths.py  shared.py
src/integrations/: __init__.py  feishu_task.py  finance.py
src/memory/: __init__.py  conversation.py  prompt_cache.py  state.py
src/models/: __init__.py  types.py
src/prompt/: __init__.py  builder.py  templates.py
src/prompts_example/: SOUL.md.example
src/services/: __init__.py  announcement_service.py  feedback_service.py  invite_service.py  token_service.py
src/skills/: book_notes.py  checkin_flow.py  classify_archive.py  daily_report.py  decision_track.py  deep_dive.py  dynamic_engine.py  feishu_docs.py  feishu_task_manage.py  finance_import.py  finance_query.py  (+14 more)
tests/: test_isolation.py
(+13 files in other folders)
